# spore-warriors-resources

./: Cargo.toml  README.md
resources/: actions.json  cards.json  effects.json  enemies.json  items.json  loots.json  scenes.json  systems.json  warriors.json
src/: lib.rs  main.rs
src/loader/: actions.rs  cards.rs  effects.rs  enemies.rs  items.rs  loots.rs  mod.rs  scenes.rs  systems.rs  types.rs  warriors.rs
