[package]
name = "spore-warriors-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
molecule = "0.7.5"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"

spore-warriors-generated = { git = "https://github.com/btckoguebike/spore-warriors-contract" }
